--- a/EqualImage/Base.lproj/Main.storyboard
+++ b/EqualImage/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D30" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,66 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2kU-uv-iTa">
+                                <rect key="frame" x="137" y="587" width="100" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="3HV-zW-WU8"/>
+                                    <constraint firstAttribute="width" constant="100" id="lqF-gx-Kla"/>
+                                </constraints>
+                                <state key="normal" title="Start"/>
+                                <connections>
+                                    <action selector="clickStart:" destination="BYZ-38-t0r" eventType="touchUpInside" id="81P-UW-at3"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xyb-d0-tkY">
+                                <rect key="frame" x="219" y="60" width="100" height="100"/>
+                                <color key="backgroundColor" red="0.99607843139999996" green="0.56078431370000004" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="clickButton1:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zbU-tm-F0R"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XkI-Mz-aC1">
+                                <rect key="frame" x="187.5" y="517" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gHc-c4-ZXv">
+                                <rect key="frame" x="30" y="60" width="100" height="100"/>
+                                <color key="backgroundColor" red="0.99607843139999996" green="0.56078431370000004" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="rjW-Fc-ir4"/>
+                                    <constraint firstAttribute="width" constant="100" id="uzP-Oh-SXa"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="clickButton1:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eOK-44-Fwk"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Xyb-d0-tkY" firstAttribute="height" secondItem="gHc-c4-ZXv" secondAttribute="height" id="2Q0-La-YXl"/>
+                            <constraint firstItem="2kU-uv-iTa" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4LS-0r-vpi"/>
+                            <constraint firstItem="Xyb-d0-tkY" firstAttribute="top" secondItem="gHc-c4-ZXv" secondAttribute="top" id="7Ci-ch-mqf"/>
+                            <constraint firstItem="gHc-c4-ZXv" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="30" id="9x0-O4-USA"/>
+                            <constraint firstItem="Xyb-d0-tkY" firstAttribute="width" secondItem="gHc-c4-ZXv" secondAttribute="width" id="BQT-MD-v3n"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="2kU-uv-iTa" secondAttribute="bottom" constant="40" id="L4x-Bl-U5Y"/>
+                            <constraint firstItem="XkI-Mz-aC1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Zxe-hg-G0k"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Xyb-d0-tkY" secondAttribute="trailing" constant="40" id="dmf-lW-DM4"/>
+                            <constraint firstItem="gHc-c4-ZXv" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="40" id="rg2-bj-dld"/>
+                            <constraint firstItem="2kU-uv-iTa" firstAttribute="top" secondItem="XkI-Mz-aC1" secondAttribute="bottom" constant="70" id="v6K-8B-Iib"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="button1" destination="gHc-c4-ZXv" id="NPx-y0-q5E"/>
+                        <outlet property="button2" destination="Xyb-d0-tkY" id="5zd-vA-ZpB"/>
+                        <outlet property="resultLabel" destination="XkI-Mz-aC1" id="0Fs-3Q-Smu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-116" y="127.28635682158921"/>
         </scene>
     </scenes>
 </document>
